--- a/test.Rmd
+++ b/test.Rmd
@@ -1,10 +1,9 @@
 ---
 title: Testing the features
 output: 
-  html_document:
-    self_contained: false
+  md_document:
     variant: markdown_github
-    toc: true
+    toc: false
     toc_depth: 2
     preserve_yaml: true
 layout: default
