--- a/courses/montpellier-2015/lecture-01.Rmd
+++ b/courses/montpellier-2015/lecture-01.Rmd
@@ -2,7 +2,8 @@
 title: "Hierarchical Models Made Easy -- Lecture 1"
 date: "August 1, 2015 -- Montpellier, France"
 author: "Peter Solymos & Subhash Lele"
-output: pdf_document
+output: html_document
+layout: default
 ---
 
 ```{r echo=FALSE}
