--- a/courses/montpellier-2015/lecture-01.Rmd
+++ b/courses/montpellier-2015/lecture-01.Rmd
@@ -6,9 +6,6 @@ output: html_document
 layout: default
 ---
 
-```{r echo=FALSE}
-op <- par(las=1)
-```
 # Introduction
 
 Science, as we envision it, is an interplay between inductive and deductive processes. Francis Bacon, the father of what is known as the scientific method, emphasizes the roles of observations, alternative explanations and tests to choose among various explanations. Bacon saw science as inductive process, moving from the particular to the general (Susser, 1986). Popper (1959) proposed the doctrine of falsification, which defines what is acceptable as a scientific hypothesis: if a statement cannot be falsified, then it is not a scientific hypothesis. This is intrinsically a deductive process. What is common to these different views is that theories need to be probed to assess their correctness. Observations play an important role in such probing. 
@@ -61,7 +58,8 @@ We take product because observations are assumed to be independent of each other
 * Likelihood is a function of the parameter. Data are fixed. 
 * It is _not_ a probability of the parameter taking a specific value. It represents the following quantity: If the parameter is $$p=p^\ast$$, then the probability of observing the data at hand is $$L(\tilde{p}; y_{1}, y_{2}, \ldots, y_{n}) = \prod_{i=1}^{n} \tilde{p}^{y_{i}} (1-\tilde{p})^{1-y_{i}}$$. We can vary the parameter value and get a function as represented below:
 
-```{r}
+```R
+op <- par(las=1)
 set.seed(1234)
 (y <- rbinom(n = 100, size = 1, p = 0.5))
 y1 <- y[1:10]
@@ -104,9 +102,7 @@ matplot(pt, Lm, type = "l",
     lty = 1, ylab = "L / max(L)", main = "n increases",
     col=rev(terrain.colors(ncol(Lm))))
 abline(v = 0.5, lwd = 2, col = 2)
-
 ```
-
 
 * Likelihood value represents the support in the data for a particular parameter value. This is intrinsically a relative concept. How much more support do we have for this parameter value vs that parameter value. 
 * Likelihood ratio is a more fundamental concept than the likelihood function itself. Law of the likelihood (Hacking, Royall): 
@@ -120,7 +116,7 @@ abline(v = 0.5, lwd = 2, col = 2)
 
 Which parameter value has the largest support in the data? 
 
-```{r}
+```R
 ## Using numerical optimization 
 ## to get the maximum of the likelihood function
 sim_fun <- function(n, p) {
@@ -138,22 +134,20 @@ optimize(nll_fun, interval = c(0, 1), y = y)
 ## explain why minimize, what is nll, what is optimize (1D)
 ## explain why -sum(log())
 ## explain the process: set values, simulate, estimate, repeat
-
 ```
 
 
 Illustrate: 
-1) Using numerical optimization to get the MLE (once you can write the likelihood)
-2) Different data sets lead to different parameter estimates. 
-
+1. Using numerical optimization to get the MLE (once you can write the likelihood)
+2. Different data sets lead to different parameter estimates. 
 
 Different samples lead to different value of MLE. A natural question to ask would be: How much would the answers vary if we have different samples? 
 
 R commands: 
-The sampling distribution of the estimates
-Confidence interval
+* The sampling distribution of the estimates
+* Confidence interval
 
-```{r}
+```R
 B <- 1000
 res <- numeric(B)
 for (i in 1:B) {
@@ -189,7 +183,7 @@ Estimated confidence intervals:
 
 We have the MLE. The MLE is kind of close to the true parameter value. So suppose we pretend as if the MLE is the true parameter value, we can get the sampling distribution and the confidence interval. This is the idea behind the parametric bootstrap confidence intervals. 
 
-```{r}
+```R
 ## parametric bootstrap comes here
 B <- 1000
 y <- sim_fun(n, p)
@@ -202,7 +196,7 @@ for (i in 1:B) {
 quantile(bres, a)
 ```
 
-```{r}
+```R
 ## non-parametric bootstrap -- move this around as needed
 B <- 1000
 y <- sim_fun(n, p)
@@ -219,7 +213,7 @@ R commands:
 
 Simulation based CI and its comparison to the true CI (Based on the true parameter value)
 
-```{r}
+```R
 ci <- matrix(NA, B, 2)
 for (i in 1:B) {
     y <- sim_fun(n, p)
@@ -240,7 +234,7 @@ The implicit logic is that if the procedure is reliable, we could rely on the in
 This is similar to relying more on the blood pressure results from a machine that has small measurement error than the one with large measurement error. 
 
 
-```{r}
+```R
 ## Bayesian posterior calculations
 y0 <- sim_fun(100, p)
 y <- y0[1:10]
@@ -268,7 +262,6 @@ plot(pval, Pri/sum(Pri), type="l")
 plot(pval, Lik*Pri/sum(Lik*Pri), type="l")
 
 ## ckeck if product in Lik and prior is OK as separate
-
-
 ```
 
+The end. See [Lecture 2](./lecture-02.html).
