--- a/template.Rmd
+++ b/template.Rmd
@@ -10,7 +10,7 @@ layout: default
 * [Chapter 2](#chapter-2)
 * [Chapter 3](#chapter-3)
 
-## <a id="chapter-1"></a>Always start with a header 
+## Always start with a header <a id="chapter-1"></a>
 
 This `Rmd` file demonstrates how we intend to host text/math/code
 on the website. We have 3 aims:
@@ -28,7 +28,7 @@ on the website. We have 3 aims:
 2. We can delop text/code/math without polluting our workspace
   with ugly html stuff.
 
-## <a id="chapter-2"></a>Workflow
+## Workflow <a id="chapter-2"></a>
 
 1. Create a new `Rmd` ([R Markdown](http://rmarkdown.rstudio.com))file.
 2. Use the source of this file (`test.Rmd`) as template,
@@ -47,7 +47,7 @@ on the website. We have 3 aims:
   through GitHub. Any changes should be visible on the website
   almost instantly (might have to refresh the browser).
 
-## <a id="chapter-3"></a>Showcase
+## Showcase <a id="chapter-3"></a>
 
 This is plain text.
 
@@ -116,7 +116,7 @@ Cell 3 | Cell 4
 Another table:
 
 | Option | Description |
-| ------:| -----------:|
+| :-----:| -----------:|
 | data   | path to data files to supply the data that will be passed into templates. |
 | engine | engine to be used for processing templates. Handlebars is the default. |
 | ext    | extension to be used for dest files. |
