--- a/template.Rmd
+++ b/template.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Testing the features
-output: html_document
+title: "Testing the features"
+output: pdf_document
 layout: default
 ---
 
