--- a/template.Rmd
+++ b/template.Rmd
@@ -49,7 +49,7 @@ on the website. We have 3 aims:
 
 ## Showcase
 
-This is plain text.
+This is plain text. This is footnote<sup><a href="#footnote-1"></a>1</sup>
 
 This text is *italics* and _italics_, while this is
 **bold** and __bold__.
@@ -90,8 +90,8 @@ horizontal rule (or slide break):
 
 > block quote:
 > Someone once said this
->> Nested block
->>> Nested even more.
+> > Nested block
+> > > Nested even more.
 
 ## Lists
 
@@ -259,4 +259,4 @@ This is a a map
 
 <p>And this is a link to dowload the <a href="ftp://web|anonymous:anonymous@ftp.public.abmi.ca/species.abmi.ca/climate/raster/MAT.zip">zipped raster file</a>.</p>
 
-
+<a id="footnote-1">1.</a> Footnote 1.
