--- a/template.Rmd
+++ b/template.Rmd
@@ -50,7 +50,9 @@ on the website. We have 3 aims:
 ## Showcase
 
 This is plain text. This is footnote<sup><a href="#footnote-1">1</a></sup> and
-this is reference <a href="#Smith2000">Smith 2000</a>.
+this is reference <a href="#Smith2000">Smith 2000</a>. References can be
+treated as abbreviations, but that is not too $\LaTeX$ friendly, like
+<abbr title="Smith 2000. The best paper ever. *Journal*, 1-2.">Smith 2000</abbr>
 
 This text is *italics* and _italics_, while this is
 **bold** and __bold__.
@@ -89,10 +91,6 @@ horizontal rule (or slide break):
 
 ***
 
-> block quote:
-> Someone once said this
-> > Nested block
-> > > Nested even more.
 
 ## Lists
 
@@ -211,9 +209,14 @@ superscript^2^
 - [X] done
 - [ ] to do.
 
+> block quote:
+> Someone once said this
+> > Nested block
+> > > Nested even more.
+
 ## Bootstrap tags
 
-These tags can be used to track changes in cods:
+These tags can be used to track changes in code:
 
 * <del>This line of text is meant to be treated as deleted text.</del>
 * <s>This line of text is meant to be treated as no longer accurate.</s>
