--- a/template.Rmd
+++ b/template.Rmd
@@ -241,6 +241,14 @@ These backgrounds can be used to highlight topics
 <p class="bg-warning">&nbsp;<i class="fa fa-warning"></i> warning</p>
 <p class="bg-danger">&nbsp;<i class="fa fa-bolt"></i> danger</p>
 
+#### Emphasis classes
+
+<p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+<p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+<p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+<p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
+<p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+<p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
 
 > ### Use headings in quote block?
 >
@@ -269,3 +277,47 @@ This is a a map
 <a id="Smith2000"></a>Smith 2000. The best paper ever. *Journal*, 1-2.
 
 <a id="footnote-1">1.</a> Footnote 1.
+
+## Bootswatch
+
+<ul class="pager">
+  <li><a href="#">Previous</a></li>
+  <li><a href="#">Next</a></li>
+</ul>
+
+<ul class="pagination">
+  <li class="disabled"><a href="#">«</a></li>
+  <li class="active"><a href="#">1</a></li>
+  <li><a href="#">2</a></li>
+  <li><a href="#">3</a></li>
+  <li><a href="#">4</a></li>
+  <li><a href="#">5</a></li>
+  <li><a href="#">»</a></li>
+</ul>
+
+<div class="alert alert-dismissible alert-warning">
+<button type="button" class="close" data-dismiss="alert">×</button>
+#### Warning!
+
+Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. 
+</div>
+
+<div class="jumbotron">
+# Jumbotron
+
+This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.
+<p><a class="btn btn-primary btn-lg">Learn more</a></p>
+</div>
+
+<div class="panel panel-success">
+<div class="panel-heading">
+### &nbsp;<i class="fa fa-check-square-o"></i> Panel primary
+</div>
+<div class="panel-body">
+Panel content
+</div>
+</div>
+
+<div class="well">
+  Look, I'm in a well!
+</div>
