--- a/template.Rmd
+++ b/template.Rmd
@@ -296,7 +296,7 @@ This is a a map
 </ul>
 
 <div class="alert alert-dismissible alert-warning">
-<button type="button" class="close" data-dismiss="alert">×</button>
+<button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>
 #### Warning!
 
 Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. 
