--- a/template.Rmd
+++ b/template.Rmd
@@ -54,6 +54,25 @@ this is reference <a href="#Smith2000">Smith 2000</a>. References can be
 treated as abbreviations, but that is not too $\LaTeX$ friendly, like
 <abbr title="Smith 2000. The best paper ever. Journal, 1-2.">Smith 2000</abbr>
 
+This is [an example][id] reference-style link.
+[id]: http://example.com/  "Optional Title Here"
+
+This is some text.[^1]. Other text.[^footnote].
+
+[^1]: Some *crazy* footnote definition.
+
+[^footnote]:
+    > Blockquotes can be in a footnote.
+
+        as well as code blocks
+
+    or, naturally, simple paragraphs.
+
+[^other-note]:       no code block here (spaces are stripped away)
+
+[^codeblock-note]:
+        this is now a code block (8 spaces indentation)
+
 This text is *italics* and _italics_, while this is
 **bold** and __bold__.
 
