--- a/template.Rmd
+++ b/template.Rmd
@@ -168,6 +168,7 @@ function (X, FUN, ...)
 a <- c(1,2,3) # x y z
 b <- c(TRUE, FALSE)
 ## k c z
+k <- c("a", "b")
 ``` 
 ver 2
 
@@ -183,6 +184,7 @@ function (X, FUN, ...)
 a <- c(1,2,3) # x y z
 b <- c(TRUE, FALSE)
 ## k c z
+k <- c("a", "b")
 ``` 
 ver 3
 
@@ -198,6 +200,7 @@ function (X, FUN, ...)
 a <- c(1,2,3) # x y z
 b <- c(TRUE, FALSE)
 ## k c z
+k <- c("a", "b")
 ``` 
 
 ver 4
@@ -214,6 +217,7 @@ function (X, FUN, ...)
 a <- c(1,2,3) # x y z
 b <- c(TRUE, FALSE)
 ## k c z
+k <- c("a", "b")
 ``` 
 
 ver 5
@@ -230,15 +234,23 @@ function (X, FUN, ...)
 a <- c(1,2,3) # x y z
 b <- c(TRUE, FALSE)
 ## k c z
+k <- c("a", "b")
 {% endhighlight %}
 
 ver 6
 
-<pre style=""><code class="source r">#for the dataset
-data('mtcars')
-mcor <-cor(mtcars)
-# Print mcor and round to 2 digits
-round(mcor,digits=2)
+<pre><code class="source r">lapply <-
+function (X, FUN, ...) 
+{
+    FUN <- match.fun(FUN)
+    if (!is.vector(X) || is.object(X)) 
+        X <- as.list(X)
+    .Internal(lapply(X, FUN))
+}
+a <- c(1,2,3) # x y z
+b <- c(TRUE, FALSE)
+## k c z
+k <- c("a", "b")
 </code></pre>
 
 ver 7
@@ -254,6 +266,7 @@ function (X, FUN, ...)
 a <- c(1,2,3) # x y z
 b <- c(TRUE, FALSE)
 ## k c z
+k <- c("a", "b")
 </code></pre> 
 
 ### GFM options (that don't work, but left here for testing anyway):
