--- a/template.Rmd
+++ b/template.Rmd
@@ -2,7 +2,7 @@
 title: "Testing the features"
 output: html_document
 layout: default
-fancyfonts: false
+fancyfonts: true
 theme: paper
 navbar: transparent
 ---
