--- a/template.Rmd
+++ b/template.Rmd
@@ -2,8 +2,7 @@
 title: "Testing the features"
 output: html_document
 layout: default
-fancyfonts: false
-theme: paper
+theme: united
 navbar: transparent
 ---
 
