--- a/_posts/2013-06-01-news.md
+++ b/_posts/2013-06-01-news.md
@@ -3,6 +3,7 @@ layout: default
 title: Version 1.0 of the ABMI Species Website is up and running
 modified: 2013-06-01
 tags: [ABMI, news]
+category: news
 ---
 
 Version 1.0 of the ABMI Species Website is up and running.
