--- a/_posts/2014-03-01-news.md
+++ b/_posts/2014-03-01-news.md
@@ -3,6 +3,7 @@ layout: default
 title: Minor update to website
 modified: 2014-03-01
 tags: [ABMI, news]
+category: news
 ---
 
 A minor update was done to the website fixing legends floating 
