--- a/_posts/2014-12-11-news.md
+++ b/_posts/2014-12-11-news.md
@@ -3,6 +3,7 @@ layout: default
 title: Version 2.0 Updated
 modified: 2013-06-01
 tags: [ABMI, news]
+category: news
 ---
 
 The content has been streamlined, content includes minor fixes.
