--- a/_posts/2014-06-01-news.md
+++ b/_posts/2014-06-01-news.md
@@ -3,6 +3,7 @@ layout: default
 title: New layout for species website
 modified: 2014-06-01
 tags: [ABMI, news]
+category: news
 ---
 
 It has been almost a year since the ABMI Species Website is up and running 
